# projeto-final-engenharia-dados-satc

./: .gitignore  LICENSE.md  README.md  _README.md  _requirements.txt  desenho_arquitetura.excalidraw  index.html  mkdocs.yml  pyproject.toml  search.html
configuracao/: index.html
css/: extra.css
data/raw/: dump.sql  sakila-schema.sql  schema.sql
databricks/: all.py
docs/: index.md  mkdocs.yml  pipeline.md  projeto.md  test.md
docs/docs/: configuracao.md  index.md  pipeline.md  projeto.md  step.md
docs/site/: 404.html  search.html
docs/site/projeto/: index.html
docs/site/search/: search_index.json
iac/adls/: .terraform.lock.hcl  main.tf
iac/databricks/: .terraform.lock.hcl  variables.tf
iac/sqlserver/: main.tf  outputs.tf  providers.tf  variables.tf
notebooks/camadas/: 1-landing.ipynb  2-bronze.ipynb  3-silver.ipynb  4-gold.ipynb  env.ipynb
notebooks/extrator/: README.md  databrick.ipynb  extras.py  landing.dbc  libs  libs.txt  main.py
notebooks/extrator-beta/: extrac.py  extract.py
notebooks/gerador/: main.py
notebooks/processar/: all.py  bronze.ipynb
notebooks/src/: teste.py
notebooks/workflow/: etl-pipeline.yml
pipeline/: index.html
scripts/: pyproject.toml
search/: search_index.json
step/: index.html
