[tool.poetry]
name = "projeto-final-engenharia-dados-satc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
mysql-connector-python = "^9.1.0"
sqlalchemy = "^2.0.36"
minio = "^7.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
